[package]
name = "rmrf"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A simple `rm -rf` command alternative"
homepage = "https://github.com/sumibi-yakitori/rmrf"
documentation = "https://docs.rs/rmrf"
repository = "https://github.com/sumibi-yakitori/rmrf"
readme = "README.md"
keywords = ["rm", "trash", "delete", "recycle"]
categories = ["command-line-interface", "command-line-utilities"]

[badges]
github = { repository = "sumibi-yakitori/rmrf", workflow = "Rust" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
trash = { version = "3.0", features = ["coinit_speed_over_memory"] }
# anyhow = { version = "1.0", features = [ "backtrace" ] }
